docs/0.14/_sources/api/gammapy.modeling.models.ScaleSpectralModel.rst.txt
ScaleSpectralModel
==================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: ScaleSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~ScaleSpectralModel.model
      ~ScaleSpectralModel.norm
      ~ScaleSpectralModel.parameters
      ~ScaleSpectralModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~ScaleSpectralModel.__call__
      ~ScaleSpectralModel.copy
      ~ScaleSpectralModel.create
      ~ScaleSpectralModel.energy_flux
      ~ScaleSpectralModel.energy_flux_error
      ~ScaleSpectralModel.evaluate
      ~ScaleSpectralModel.evaluate_error
      ~ScaleSpectralModel.from_dict
      ~ScaleSpectralModel.integral
      ~ScaleSpectralModel.integral_error
      ~ScaleSpectralModel.inverse
      ~ScaleSpectralModel.plot
      ~ScaleSpectralModel.plot_error
      ~ScaleSpectralModel.spectral_index
      ~ScaleSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: model
   .. autoattribute:: norm
   .. autoattribute:: parameters
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
